# logs

./: CLAUDE.md  Cargo.toml  README.md  index.html
.claude/: settings.local.json
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: esologs_convert.rs  esologs_format.rs  lib.rs  log_edit.rs  main.rs  rich_presence.rs  split_log.rs
desktop/: Cargo.toml  README.md  Trunk.toml  index.html  styles.css
desktop/common/: Cargo.toml
desktop/common/src/: lib.rs
desktop/src/: app.rs  lib.rs  main.rs  routes.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  state.rs
desktop/src/ui/: homepage.rs  icon_button.rs  live_log.rs  login.rs  logo.rs  mod.rs  modify.rs  split.rs  style.rs  terms.rs  upload.rs
parser/: Cargo.toml  README.md
parser/src/: caused_by_hashmap.csv  effect.rs  event.rs  fight.rs  item_data.csv  lib.rs  log.rs  parse.rs  player.rs  set.rs  set_data.csv  subclassing.rs  ui.rs  unit.rs  zone.rs  zone_data.csv
src/: effect.rs  event.rs  fight.rs  id_to_weapon.txt  log.rs  main.rs  player.rs  set.rs  set_data.txt  ui.rs  unit.rs
ui/: Cargo.toml
ui/src/: main.rs
