[package]
name = "esologanalysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-format = "0.4.4"
lazy_static = "1.5.0"
yew = { version = "0.21.0", features = ["csr"] }
web-sys = "0.3.77"
plotly = {version = "0.12.1", features = ["wasm"] }
yew-hooks = "0.3.3"