[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
discord-rich-presence = "1.0.0"
ftail = "0.3.0"
log = "0.4.27"
parser = { path = "../parser" }
rayon = "1.11.0"
zip = { version = "4.2.0", default-features = false, features = ["deflate"] }
esosim = { git = "https://github.com/sheumais/esosim/" }
