[package]
name = "esologtool"
version = "0.2.3"
edition = "2021"

[lib]
name = "esologtool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parser = { path = "../../parser" }
cli = { path = "../../cli" }
reqwest = { version = "0.12.21", default-features = false, features = ["rustls-tls", "json", "cookies", "multipart"] }
cookie_store = "0.21.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

