[package]
name = "esologtool"
version = "0.4.3"
edition = "2021"

[lib]
name = "esologtool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
tauri = { version = "^2", features = [] }
tauri-plugin-opener = "^2"
tauri-plugin-dialog = "^2"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
parser = { path = "../../parser" }
cli = { path = "../../cli" }
esologtool-common = {path = "../common" }
reqwest = { version = "0.12.21", default-features = false, features = ["rustls-tls", "json", "cookies", "multipart"] }
cookie_store = { version = "0.21.1", features = ["serde"] }
reqwest_cookie_store = "0.8.2"
dirs = "6.0.0"
ftail = "0.3.0"
log = "0.4.27"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "^2"

